# PonsWarp

./: .commitlintrc.json  .env.example  .eslintrc.json  .gitignore  .releaserc.json  App.tsx  CHANGELOG.md  Cargo.toml  EXPERIMENT.md  FILE_CORRUPTION_FIX.md  IMPLEMENTATION_SUMMARY.md  PERFORMANCE_OPTIMIZATION_PLAN.md  README.md  WORKSPACE.md  compose.yaml  constants.ts  index.css  index.html  index.tsx  metadata.json  next.config.ts  node_modules  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.js  test-zip.html  tsconfig.json  types.ts  vite.config.ts  vitest.config.ts
PonsWarp/: .env.example  README.md  compose.yaml  index.css  index.html  node_modules  package.json  vite.config.ts
components/: ReceiverView.tsx  SenderView.tsx  SpaceField.tsx  WarpBackground.tsx
deploy/: Dockerfile.ponswarp-signaling  deploy-production.sh
docs/: BROWSER_CONSTRAINTS.md  COMPONENTS.md  DESIGN_REFERENCES.md  STATE_MACHINE.md
hooks/: usePreventNavigation.ts
pons-core-wasm/: .gitignore  Cargo.toml  LICENSE  build.sh  package.json
pons-core-wasm/scripts/: verify-package.mjs
pons-core-wasm/src/: benchmark.rs  chunk_pool.rs  crc32.rs  file_signature.rs  lib.rs  merkle_tree.rs  packet.rs  reordering_buffer.rs  sha256_stream.rs  zero_copy_pool.rs
pons-core-wasm/src/compression/: lz4.rs  mod.rs
pons-core-wasm/src/crypto/: aes_gcm.rs  kdf.rs  mod.rs  parallel.rs
pons-core-wasm/src/fec/: mod.rs  reed_solomon.rs
pons-core-wasm/src/zip64/: constants.rs  deflate.rs  mod.rs  stream.rs  structures.rs
ponswarp-signaling-rs/: .env.example  (+2 more)
(+341 files in other folders)
