[package]
name = "pons-core-wasm"
version = "0.4.3"
edition = "2021"
description = "PonsWarp core modules compiled to WebAssembly - Zero-Copy, ZIP64, FEC, Zstd, Merkle Tree support"
license = "MIT"
repository = "https://github.com/pons-warp/pons-core-wasm"
keywords = ["wasm", "webassembly", "zip64", "compression", "streaming", "fec", "zstd", "merkle"]

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[features]
default = []
simd = []  # SIMD 최적화 활성화

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
miniz_oxide = "0.8"

[dev-dependencies]
wasm-bindgen-test = "0.3"


# SIMD 빌드: RUSTFLAGS='-C target-feature=+simd128' wasm-pack build --target web --features simd
